tests/ui/lint/snapshots/regexp_in_loop_while_condition.snap
---
source: tests/ui/lint/mod.rs
---
  ● Regexp recompiled on every iteration
   ╭─[test.lis:6:28]
 5 │   let s = "abc"
 6 │   while regexp.MatchString("[0-9]+", s).unwrap_or(false) {
   ·                            ────┬───
   ·                                ╰── recompiled
 7 │     let _ = 1
   ╰────
  help: Compile the pattern once outside the loop and reuse it: `regexp.MustCompile`, or `regexp.Compile` to keep the error · code: [lint.regexp_in_loop]
