tests/ui/lint/snapshots/repeated_if_condition_dot_access.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ `if` condition repeated in `else if`
   ╭─[test.lis:6:38]
 5 │   let c = Config { enabled: true };
 6 │   let _ = if c.enabled { 1 } else if c.enabled { 2 } else { 3 }
   ·                                      ────┬────
   ·                                          ╰── same as prior condition
 7 │ }
   ╰────
  help: This branch is unreachable because its condition duplicates the preceding condition. Did you mean a different condition? · code: [infer.repeated_if_condition]
