tests/ui/lint/snapshots/repeated_if_condition_simple.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ `if` condition repeated in `else if`
   ╭─[test.lis:4:34]
 3 │   let x = 5;
 4 │   let _ = if x > 0 { 1 } else if x > 0 { 2 } else { 3 }
   ·                                  ──┬──
   ·                                    ╰── same as prior condition
 5 │ }
   ╰────
  help: This branch is unreachable because its condition duplicates the preceding condition. Did you mean a different condition? · code: [infer.repeated_if_condition]
